Merging from old trunk: r652602 | lunakl | 2007-04-11 16:42:13 +0200 (Wed, 11 Apr 2007) | 4 lines

Fix timestamp handling on 64bit platforms.
BUG: 143545


svn path=/trunk/KDE/kdebase/workspace/; revision=659578